# lib-ml

./: GitVersion.yaml  GitVersion.yml  README.md  VERSION  pyproject.toml  requirements.txt
.github/workflows/: release.yml
lib_ml/: preprocess.py
src/: preprocess.py
