[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lib-ml"
version = "0.0.1"
description = "Library for ML preprocessing"
authors = [
    { name = "Group 18" }
]
requires-python = ">=3.7"

dependencies = [
    "click==8.1.8",
    "joblib==1.5.0",
    "nltk==3.9.1",
    "numpy==1.24.0",
    "pandas==2.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "regex==2024.11.6",
    "six==1.17.0",
    "tqdm==4.67.1",
    "tzdata==2025.2"
]

[tool.setuptools]
packages = ["lib_ml"]
